# udpsync

./: .gitignore  CMakeLists.txt  Cargo.toml  camera_overray_local.sh  camera_overray_remote.sh  camera_send_local.sh  camera_send_remote.sh  flow.xml  gstgdkpixbufoverlay.c  hoge  play.sh  recv_rtp.sh  rtp.sh  send_local.sh  send_rtp.sh  test.csv
src/: buffer.rs  gstreamer_mock.rs  haptic_data.rs  keyboard.rs  lib.rs  main.rs  rtp.c  rtp.rs  udp.rs
testscripts/: test.py  test.rb
testscripts/latency/: recv.rb  send.rb
testscripts/simple/: a.out  hoge.txt  recv.c  recv.rb  redirect.rb  send.rb
