[package]
name = "udpsync"
version = "0.1.0"
authors = ["Toshiya Nakakura <nakakura@me.com>"]
build = "build.rs"

[dependencies]
futures = "0.1.17"
tokio-core = "0.1.10"
tokio-io = "*"
either = "1.4"
chrono = "*"
bincode = "*"
rustc-serialize = "*"
lazy_static = "*"

[build-dependencies]
gcc = "*"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver_old.rs"
